--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.0
-anthropic==0.21.3
+anthropic==0.34.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 markdown==3.5.2
@@ -9,3 +9,4 @@ itsdangerous==2.1.2
 click==8.1.7
 blinker==1.7.0
 MarkupSafe==2.1.3
+httpx==0.27.0
